--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <a href="#">
                     <legend id="signup">
-                        Already a member?
+                        Not a member?
                     </legend>
                 </a>
             </form>
