--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             userIP = data.ip;
             document.getElementById("ip-display").textContent += userIP;
 
-            return fetch(`http://ip-api.com/json/${userIP}`);
+            return fetch(`https://ipinfo.io/json?token=d713045b1cb709`);
         })
         .then(response => response.json()).then(data => {
 
